syntax = "proto3";

package api.panshee.v1.proto;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/timestamp.proto";

import "panshee/v1/proto/api_token.proto";

option java_package = "api.panshee.v1.proto";
option java_multiple_files = true;
option java_outer_classname = "UserProto";

option go_package = ".;pb";

// Structure of a user
message User {
    // Id of the user
    string  id = 1;
    // Email of the user
    string email = 2;
    // User have active account or not
    bool active = 3;
    // Creation time of the user
    google.protobuf.Timestamp create_time = 4;
    // Last update time of the user
    google.protobuf.Timestamp update_time = 5;
    // Time when user was deleted
    google.protobuf.Timestamp delete_time = 6;
}

// Request for creating new user
message CreateUserRequest {
    // Parent
    string parent = 1 [
        (google.api.field_behavior) = REQUIRED,
        (google.api.resource_reference).type = "api.panshee.v1.proto/User"
      ];
    // User to create
    User user = 2 [(google.api.field_behavior) = REQUIRED];
    // Password of the user
    string password = 3 [(google.api.field_behavior) = REQUIRED];
}

//Request for looging
message LoginUserRequest {
    // Email of the user
    string email = 1 [(google.api.field_behavior) = REQUIRED];
    //password of the user
    string password = 2 [(google.api.field_behavior) = REQUIRED];
}

// Response for logging user
message LoginUserResponse{
    // Session of current user
    string session_id = 1;
    // Access token for current user
    TokenDTO access_token = 2;
    // Refresh token for current user to refreshing access token
    TokenDTO refresh_token = 3;
    // Current User
    User user = 4;
}

// Request for getting a user
message GetUserRequest {
    // Id of the user to get
    string name = 1 [
        (google.api.field_behavior) = REQUIRED,
        (google.api.resource_reference).type = "api.panshee.v1.proto/User"
      ];
}
